--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -14,13 +14,16 @@
     - title: PhD (pursuing)
       institution: University of Washington, Seattle.
       year: (2019-present)
-      description:
-        - Probability
+      
+    - title: Masters of Science
+      institution: University of Washington, Seattle.
+      year: 2022
+      
     - title: Masters of Science
       institution: Indian Institute of Science, Bangalore.
       year: 2019
       description:
-        - thesis title..
+        - Thesis title: Determinantal processes and stochastic domination
 #
 # - title: Experience
 #  type: time_table
@@ -43,24 +46,26 @@
 #      year: 2015-now
 #      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
 
-# - title: Honors and Awards
-#  type: time_table
-#  contents:
-#    - year: 1921
-#      items: 
-#        - Nobel Prize in Physics 
-#        - Matteucci Medal
-#    - year: 2029
-#      items: 
-#        - Max Planck Medal
+- title: Honors and Awards
+  type: time_table
+  contents:
+    - year: 2021
+      items: 
+        - Academic Excellence Award, UW
+    - year: 2019-2021
+      items: 
+        - Provost Fellowship, UW
+    - year: 2018
+      items: 
+        - CSIR-NET Junior Research Fellowship (All India Rank 3)
 
 - title: Academic Interests
   type: nested_list
   contents:
-    - title: Probability
-      items: 
-        - Description 1.
-        - Description 2.
+    - title: Probability and Analysis
+#      items: 
+#        - Description 1.
+#        - Description 2.
 #    - title: Topic 2.
 #      items:
 #        - Description 1.
