--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ description: > # the ">" symbol means to ignore newlines until "footer_text:"
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
-keywords: jekyll, jekyll-theme, academic-website, portfolio-website  # add your own keywords or leave empty
+  
+keywords: Raghav, Tripathi, Raghavendra, Raghav Tripathi, Raghavendra Tripathi, Mathematics, Math, Probability, Graphons, Optimal Transport, IISc, UW, Indian Institute of Science, University of Washington, Seattle, Bangalore, Delhi, DU, CIC, Cluster Innovation Center 
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚛️  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
@@ -20,7 +20,7 @@ icon: ⚛️  # the emoji used as the favicon (alternatively, provide image name
 url: https://raghavendratripathi.github.io # the base hostname & protocol for your site
 baseurl:  # the subpath of your site, e.g. /blog/
 last_updated: false # set to true if you want to display last updated in the footer
-impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
+
 
 # -----------------------------------------------------------------------------
 # Theme
@@ -68,32 +68,15 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 
 #github_username: # your GitHub user name
 #gitlab_username: # your GitLab user name
-#mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 #linkedin_username: # your LinkedIn user name
-#telegram_username: # your Telegram user name
 #scholar_userid: # your Google Scholar ID
 #semanticscholar_id: # your Semantic Scholar ID
 #whatsapp_number: # your WhatsApp number (full phone number in international format. Omit any zeroes, brackets, or dashes when adding the phone number in international format.)
-#orcid_id: # your ORCID ID
-#medium_username: # your Medium username
-#quora_username: # your Quora username
-#publons_id: # your ID on Publons
+orcid_id: 0000-0003-4595-998X
 #research_gate_profile: # your profile on ResearchGate
-#blogger_url: # your blogger URL
-#work_url: # work page URL
-#keybase_username: # your keybase user name
 #wikidata_id: # your wikidata id
-#dblp_url: # your DBLP profile url
-#stackoverflow_id: # your stackoverflow id
-#kaggle_id: # your kaggle id
-#lastfm_id: # your lastfm id
-#spotify_id: # your spotify id
-#pinterest_id: # your pinterest id
-#unsplash_id: # your unsplash id
-#instagram_id: # your instagram id
-#facebook_id: # your facebook id
-#youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
-#discord_id: # your discord id (18-digit unique numerical identifier)
+
+
 
 contact_note: >
   Email is the best way to reach me.
@@ -137,16 +120,13 @@ giscus:
   emit_metadata: 0
   lang: en
 
-# Disqus comments (DEPRECATED)
-#disqus_shortname: al-folio # put your disqus shortname
-# https://help.disqus.com/en/articles/1717111-what-s-a-shortname
 
 # External sources.
 # If you have blog posts published on medium.com or other exteranl sources,
 # you can display them in your blog by adding a link to the RSS feed.
-external_sources:
-  - name: medium.com
-    rss_url: https://medium.com/@al-folio/feed
+#external_sources:
+#  - name: medium.com
+#    rss_url: https://medium.com/@al-folio/feed
 
 # -----------------------------------------------------------------------------
 # Collections
@@ -159,7 +139,7 @@ collections:
     output: false
     permalink: /news/:path/
   projects:
-    output: false
+    output: true
     permalink: /projects/:path/
 
 news_scrollable: true # adds a vertical scroll bar if there are more than 3 news items
@@ -270,9 +250,9 @@ scholar:
 
   query: "@*"
 
-badges: # Display different badges for your pulications
-  altmetric_badge: true # Altmetric badge (https://www.altmetric.com/products/altmetric-badges/)
-  dimensions_badge: true # Dimensions badge (https://badge.dimensions.ai/)
+#badges: # Display different badges for your pulications
+#  altmetric_badge: true # Altmetric badge (https://www.altmetric.com/products/altmetric-badges/)
+#  dimensions_badge: true # Dimensions badge (https://badge.dimensions.ai/)
 
 # Filter out certain bibtex entry keywords used internally from the bib output
 filtered_bibtex_keywords: [abbr, abstract, arxiv, bibtex_show, html, pdf, selected, supp, blog, code, poster, slides, website, preview, altmetric]
@@ -329,8 +309,8 @@ jekyll-diagrams:
 
 enable_google_analytics:    false  # enables google analytics
 enable_panelbear_analytics: false  # enables panelbear analytics
-enable_google_verification: false  # enables google site verification
-enable_bing_verification:   false  # enables bing site verification
+enable_google_verification: true  # enables google site verification
+enable_bing_verification:   true  # enables bing site verification
 enable_masonry:             true   # enables automatic project cards arangement
 enable_math:                true   # enables math typesetting (uses MathJax)
 enable_tooltips:            false  # enables automatic tooltip links generated
