--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ contact_note: >
 #google_analytics:  # your Google Analytics measurement ID (format: G-XXXXXXXXXX)
 #panelbear_analytics:  # panelbear analytics site ID (format: XXXXXXXXX)
 
-#google_site_verification:  # your google-site-verification ID (Google Search Console)
+#google_site_verification: wNRZNBsWZoKGMtiYkOuWcg-RPY7qPviakjVNze78jAk
 #bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 
 # -----------------------------------------------------------------------------
