--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Raghav Tripathi # the website title (if blank, full name will be used instead)
+title: Raghavendra Tripathi # the website title (if blank, full name will be used instead)
 first_name: Raghavendra
 last_name: Tripathi
 email: raghavt@uw.edu
