--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -23,8 +23,8 @@
       institution: Indian Institute of Science, Bangalore.
       year: 2019
       description:
-        -Thesis: <a href="https://arxiv.org/abs/2009.09141"> Determinantal processes and stochastic domination</a>
-        -Thesis Advisor: <a href="http://math.iisc.ac.in/~manju/"> Manjunath Krishnapur</a>
+        Thesis: <a href="https://arxiv.org/abs/2009.09141"> Determinantal processes and stochastic domination</a>
+        Thesis Advisor: <a href="http://math.iisc.ac.in/~manju/"> Manjunath Krishnapur</a>
 #
 # - title: Experience
 #  type: time_table
