--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 #linkedin_username: # your LinkedIn user name
 #scholar_userid: # your Google Scholar ID
 #semanticscholar_id: # your Semantic Scholar ID
-#whatsapp_number: # your WhatsApp number (full phone number in international format. Omit any zeroes, brackets, or dashes when adding the phone number in international format.)
+#whatsapp_number: # your WhatsApp number
 orcid_id: 0000-0003-4595-998X
 #research_gate_profile: # your profile on ResearchGate
 #wikidata_id: # your wikidata id
@@ -136,7 +136,7 @@ collections:
   news:
     defaults:
       layout: post
-    output: false
+    output: true
     permalink: /news/:path/
   projects:
     output: true
