--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -56,10 +56,10 @@
     - year: 2021
       items: 
         - Academic Excellence Award, UW
-    - year: 2020-2021
+    - year: 2020
       items: 
         - Provost Fellowship, UW
-    - year: 2019-2020
+    - year: 2019
       items: 
         - Provost Fellowship, UW
     - year: 2018
