--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -13,6 +13,7 @@
   contents:
     - title: PhD (pursuing)
       institution: University of Washington, Seattle.
+      year: Current
       description:
         Thesis advisor: <a href="https://sites.math.washington.edu//~soumik/"> Soumik Pal</a>
       
