Changing blog to talk

--- a/_config.yml
+++ b/_config.yml
@@ -95,10 +95,11 @@ bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: My musings # blog_name will be displayed in your blog page
-blog_nav_title: blog # your blog must have a title for it to be displayed in the nav bar
-blog_description: 
+blog_name: Talks/Seminars/Posters # blog_name will be displayed in your blog page
+blog_nav_title: talks # your blog must have a title for it to be displayed in the nav bar
+blog_description: Slides, posters or notes from talks.
 permalink: /blog/:year/:title/
+#permalink: /blog/:year/:title/
 
 # Pagination
 pagination:
