--- a/_config.yml
+++ b/_config.yml
@@ -95,15 +95,15 @@ bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: Talks/Seminars/Posters # blog_name will be displayed in your blog page
-blog_nav_title: talks # your blog must have a title for it to be displayed in the nav bar
-blog_description: Slides, posters or notes from talks.
-permalink: /blog/:year/:title/
+#blog_name: Talks/Seminars/Posters # blog_name will be displayed in your blog page
+#blog_nav_title: talks # your blog must have a title for it to be displayed in the nav bar
+#blog_description: Slides, posters or notes from talks.
+#permalink: /blog/:year/:title/
 #permalink: /blog/:year/:title/
 
 # Pagination
-pagination:
-  enabled: true
+#pagination:
+#  enabled: true
 
 # Giscus comments (RECOMMENDED)
 # Follow instructions on https://giscus.app/ to setup for your repo to fill out
