--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,4 +1,4 @@
-- title: Invited Talks/Seminars
+- title: Invited Talks and Seminars
   type: time_table
   contents:      
     - title: Optimization on graphons
