--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,25 +1,13 @@
-
-
-#
-# - title: Experience
-#  type: time_table
-#  contents:
-#    - title: Professor of Theoretical Physics
-#      institution: Institute for Advanced Study, Princeton University
-#      year: 1933 - 1955
-#      description:
-#        - Description 1.
-#        - Description 2.
-#        - title: Description 3.
-#          contents:
-#            - Sub-description 1.
-#            - Sub-description 2.
-
-- title: Talks/Seminars
-#  type: time_table
-#  contents:
-#    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-#      year: 2020
-#      description: .
+- title: Invited Talks/Seminars
+  type: time_table
+  contents:
+    - title: <a href="">Dynamics optimization on graphons</a>
+      institution: UW
+      year: 17 July 20
+      #description: Abracadabra
+    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
+      institution: UW
+      year: 17 July 20
+      #description: Abracadabra
 
 
