--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,4 +1,4 @@
-- title: Invited Talks/Seminars
+- title: Talks/Seminars
   type: time_table
   contents:
     - title: TBD
@@ -19,6 +19,14 @@
     - title: <a href="https://kantorovich.org/event/ki-retreat-2022/Somani-Tripathi.pdf">Gradient flow on graphons</a>
       institution: <a href="https://kantorovich.org/event/ki-retreat-2022/">KI Retreat 2022</a>
       year: 18 Mar 2022
+      #description: Abracadabra
+    - title: <a href="https://raghavendratripathi.github.io/assets/slides/Universality.pdf">Beta-matrix models and random matrix universality</a>
+      institution: <a href="https://math.washington.edu/events/2020-11-09/beta-matrix-models-and-random-matrix-universality">Probability Seminar at UW</a>
+      year: 9 Nov 2020
+      #description: Abracadabra
+    - title: Stochastic domination in determinants point processes
+      institution: <a href="https://math.washington.edu/events/2020-03-02/stochastic-domination-determinantal-point-processes">Probability Seminar at UW</a>
+      year: 2 Mar 2020
       #description: Abracadabra
 
 
