--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -28,6 +28,9 @@
       institution: <a href="https://math.washington.edu/events/2020-03-02/stochastic-domination-determinantal-point-processes">Probability Seminar at UW</a>
       year: 2 Mar 2020
       #description: Abracadabra
+    - title: Mathematics and Digital Society-Scope and Challenges
+      institution: 33rd Annual Conference of Ramanujan Mathematical Society
+      year: 1 June 2018
 
 
 - title: Student Seminars
