Changed About and CV

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -11,9 +11,9 @@
 - title: Education
   type: time_table
   contents:
-    - title: PhD (pursuing)
+    - title: PhD
       institution: University of Washington, Seattle.
-      year: Current
+      year: 2024
       description:
         Thesis advisor: <a href="https://sites.math.washington.edu//~soumik/"> Soumik Pal</a>
       
@@ -28,12 +28,12 @@
         Thesis: <a href="https://arxiv.org/abs/2009.09141"> Determinantal processes and stochastic domination</a>
         Thesis advisor: <a href="http://math.iisc.ac.in/~manju/"> Manjunath Krishnapur</a>
 #
-# - title: Experience
-#  type: time_table
-#  contents:
-#    - title: Professor of Theoretical Physics
-#      institution: Institute for Advanced Study, Princeton University
-#      year: 1933 - 1955
+ - title: Work Experience
+  type: time_table
+  contents:
+    - title: Postdoctoral Associate
+      institution: New York University, Abu Dhabi
+      year: Nov 2024 - 
 #      description:
 #        - Description 1.
 #        - Description 2.
