--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -15,8 +15,8 @@
       institution: University of Washington, Seattle.
       year: 2024
       description:
-        Thesis:<a href="">Stochastic Analysis on Graphons</a>
-        Thesis advisor: <a href="https://sites.math.washington.edu//~soumik/"> Soumik Pal</a>
+        Thesis: <a href="https://digital.lib.washington.edu/researchworks/items/35fc80cb-cd04-435f-9057-f11ce471679e">Stochastic Analysis on Graphons</a>
+        Thesis advisor: <a href="https://sites.math.washington.edu/~soumik/"> Soumik Pal</a>
       
     - title: Masters of Science
       institution: University of Washington, Seattle.
