--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,18 +2,16 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
-    - name: Languages
-      value: English, German
+      value: Raghavendra Tripathi
+    - name: Email
+      value: <a href="mailto:rt1986@nyu.edu">rt1986@nyu.edu</a>
 
 - title: Education
   type: time_table
   contents:
     - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+      institution: University of Washington, Seattle, Washington, US
+      year: 2024
       description:
         - Description 1.
         - Description 2.
